<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:background="@drawable/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/agua"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/bebaagua"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/container_header"
        app:layout_constraintTop_toTopOf="@id/container_header"
        android:contentDescription="@string/bebalogo" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_refresh"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintRight_toRightOf="@id/container_header"
        android:contentDescription="@string/restart" />

    <EditText
        android:id="@+id/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:textColorHint="@android:color/holo_blue_dark"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="Seu Peso (Kg)" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        android:textColorHint="@android:color/holo_blue_dark"
        android:layout_marginTop="30dp"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toEndOf="@id/peso"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Sua idade" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/btn_text_calcular"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_gradient_button"
        app:layout_constraintTop_toBottomOf="@id/peso"
        />

    <View
        android:id="@+id/container_resultado"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/container_resultado_ml"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_calc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/resultado_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ml"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/container_resultado"
        app:layout_constraintBottom_toBottomOf="@id/container_resultado"
        app:layout_constraintEnd_toEndOf="@id/container_resultado"
        app:layout_constraintTop_toTopOf="@id/container_resultado"

        />

    <Button
        android:id="@+id/btn_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lembrete"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_resultado"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/btn_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_alarm"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_resultado"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/btn_lembrete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <TextView
            android:id="@+id/txt_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_hora"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dois_pontos"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/txt_minuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_minuto"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>